# ckb-indexer

./: .env  Cargo.toml  README.md
schema/: pg_down.sql  pg_up.sql  tables.sql
scripts/: clean_db.sh  create_db.sh
src/: lib.rs  main.rs  service.rs  sql_indexer.rs  sql_service.rs
src/indexer/: kv_indexer.rs  mod.rs  sql_indexer.rs
src/store/: mod.rs  postgresql.rs
