[package]
name = "ckb-indexer"
version = "0.1.0"
authors = ["quake <quake.wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.31.0-pre1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.31.0-pre1" }
jsonrpc-core = "14.0"
jsonrpc-core-client = { version = "14.0", features = ["http"] }
jsonrpc-derive = "14.0"
jsonrpc-http-server = "14.0"
jsonrpc-server-utils = "14.0"
hyper = "0.12"
futures = "0.1"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
sqlx = {version = "0.3", features = ["postgres", "bigdecimal"]}
sqlx-core = {version = "0.3.5"}
async-std = "1.6.0"
bigdecimal = "0.1.2"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3.0"
rand = "0.6"
